# flask-jsonrpc

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES.rst  CONTRIBUTORS  COPYING  Dockerfile  Dockerfile.it  Dockerfile.local  Dockerfile.py310.test  Dockerfile.py311.test  Dockerfile.py312.test  Dockerfile.py313.test  Dockerfile.py36.test  Dockerfile.py37.test  Dockerfile.py38.test  Dockerfile.py39.test  MANIFEST.in  Makefile  README.md  README.rst  TODO  compose.yaml  compose.yml  docker-compose.it.yml  docker-compose.test.yml  flask_jsonrpc_tests.py  pyproject.toml  requirements.pip  requirements_ci.pip  requirements_dev.pip  requirements_development.pip  requirements_test.pip  run.py  (+4 more)
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  on-create-command.sh
.docker/: cleanup.sh  wait-for-it.sh  wait-for.sh
.docker/certs/: Cenobit_Root_CA.pem
.docker/nginx/: README.md  nginx.conf
.docker/nginx/conf.d/: app.flask-jsonrpc.cenobit.es.conf  async-app.flask-jsonrpc.cenobit.es.conf  mypyc-app.flask-jsonrpc.cenobit.es.conf  mypyc-async-app.flask-jsonrpc.cenobit.es.conf
.docker/nginx/ssl/: flask-jsonrpc.cenobit.es.crt  (+5 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql_analysis.yml  on_update.yml  pre_commit.yml  pre_release.yml  release.yml  tests.yml
docs/: api.rst  conf.py  deployment.rst  index.rst  installation.rst  quickstart.rst  testing.rst
docs/api/: flask_jsonrpc.conf.rst  flask_jsonrpc.contrib.browse.rst  flask_jsonrpc.contrib.openrpc.rst  flask_jsonrpc.contrib.rst  flask_jsonrpc.rst  flask_jsonrpc.types.rst  modules.rst
docs/howto/: index.rst
docs/patterns/: auth.rst  factories.rst  marshaling.rst  validation.rst
docs/tutorial/: index.rst  step1-app.rst  step2-methods.rst  step3-params.rst  step4-errors.rst
docs/usage/: batch.rst  blueprints.rst  errors.rst  explorer.rst  methods.rst  params.rst  types.rst
examples/async/: README.rst  async_minimal.py
examples/auth/: README.rst  auth.py
examples/authbackend/: README.rst  authbackend.py
examples/cerberus_params_validator/: README.md  example1.py  example2.py  example3.py  requirements.txt
examples/decorator/: README.rst  decorator.py
examples/flask-httpauth/: README.rst  auth.py  requirements.pip
examples/gevent/: README.md  run.py
examples/hrx/: README.rst  hrx.py
examples/javascript/: README.md  pyproject.toml
examples/javascript/src/hrx/: __init__.py  app.py
examples/javascript/src/hrx/api/: hello.py
examples/javascript/src/hrx/static/js/: api.js
examples/javascript/tests/: conftest.py  test_app.py
examples/javascript/tests/api/: test_hello.py
examples/minimal/: README.md  README.rst  minimal.py  pyproject.toml
examples/minimal-async/: README.md  pyproject.toml
examples/minimal-async/src/minimal_async/: app.py
examples/minimal-async/tests/: conftest.py  test_app.py  utils.py
examples/modular/: README.md  README.rst  modular.py  pyproject.toml  tox.ini
examples/multiplesite/: README.md  README.rst  multiple.py  multiplesite.py  pyproject.toml  tox.ini
examples/multiplesite/src/multiplesite/: app.py
examples/multiplesite/tests/: conftest.py  test_app.py
examples/openrpc/: README.md  README.rst  petstore-expanded-openrpc.json  petstore.py  pyproject.toml  tox.ini
examples/pydantic/: README.rst  run.py
examples/register_view_func/: run.py
examples/rpcdescribe/: README.md  pyproject.toml
examples/rpcdescribe/src/petstore/: __main__.py  app.py
examples/rpcdescribe/src/petstore/static/css/: login.css  logout.css  petstore.css
examples/rpcdescribe/src/petstore/static/js/: login.js  logout.js  petstore.js  services.js
examples/rpcdescribe/src/petstore/templates/browse/: dashboard.html  login.html  logout.html
examples/rpcdescribe/src/petstore/templates/browse/partials/: dashboard.html
examples/rpcdescribe/tests/: conftest.py  test_app.py
examples/wba/: README.rst  minimal.py
flask_jsonrpc/: __init__.py  _compat.py  app.py  blueprints.py  exceptions.py  globals.py  helpers.py  proxy.py  site.py  types.py  typing_inspect.py  views.py  wrappers.py
flask_jsonrpc/views/: __init__.py  browse.py
junit/: test-results.xml
requirements/: base.txt  build.txt  cbuild.txt  ci.txt  docs.txt  local.txt  production.txt  security.txt  style.txt  test.txt  tests.txt  typing.txt
src/buildtools/: __init__.py  backend.py
src/flask_jsonrpc/: __init__.py  app.py  blueprints.py  descriptor.py  encoders.py  exceptions.py  funcutils.py  globals.py  handlers.py  helpers.py  settings.py  site.py  types.py  typing.py  utils.py  views.py  wrappers.py
static/css/: bootstrap-browse.css  bootstrap-theme.css
templates/: layout.html
templates/browse/: index.html
tests/: __init__.py  appserver.py  apptest.py  conftest.py  test_app.py  test_async_app.py  test_async_client.py  test_browse.py  test_client.py  test_exceptions.py  test_funcional.py  test_helpers.py  test_jsonrpc.py  test_proxy.py  test_server.py  test_site.py  test_types.py  test_typing_inspect.py
tests/contrib/: test_browse.py
tests/integration/: __init__.py  conftest.py  pytest.ini  pytest.local.ini  test_app.py  test_browse.py  test_browse_app.py  test_browse_class_apps.py  test_browse_decorators.py  test_browse_error_handlers.py  test_browse_jsonrpc_basic.py  test_browse_pydantic_models.py  test_browse_pydantic_models_annotated.py  test_browse_python_classes.py  test_browse_python_classes_annotated.py  test_browse_python_dataclasses.py  test_browse_python_dataclasses_annotated.py  test_browse_python_stds.py  test_browse_python_stds_annotated.py
tests/test_apps/: conftest.py  pytest.ini  pytest.local.ini  test_app.py  test_browse.py
tests/unit/: conftest.py  test_app.py  test_async_app.py  test_async_client.py  test_blueprints.py  test_client.py  test_conf.py  test_descriptor.py  test_encoders.py  test_exceptions.py  test_funcutils.py  test_helpers.py  test_settings.py  test_site.py  test_types.py  test_typing.py  test_views.py  test_wrappers.py
(+145 files in other folders)
