[project]
name = "multiplesite"
version = "1.0.0"
description = "Demonstrates a minimal multiplesite Flask-JSONRPC application."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}
authors = [{name = "Nycholas Oliveira", email = "nycholas@cenobit.es"}]
maintainers = [{name = "Cenobit Technologies Inc.", email = "hi@cenobit.es"}]
requires-python = ">=3.9"
dependencies = ["Flask-JSONRPC@git+https://github.com/cenobites/flask-jsonrpc"]

[project.optional-dependencies]
async = ["Flask[async]>=3.0.0,<4.0"]
test = ["pytest"]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "multiplesite"

[tool.pytest.ini_options]
pythonpath = "src/"
testpaths = ["src/multiplesite", "tests"]
filterwarnings = ["error"]
